force-app/main/default/objects/Exception_Log__c/Exception_Log__c.object-meta.xml
<CustomObject>
    <description>To capture Exception logs to make it easy to troubleshoot</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>ELN-{000000}</displayFormat>
        <label>Exception Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>