force-app/main/default/objects/Exception_Log__c/fields/Affected_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Affected_Record_Id__c</fullName>
    <label>Affected Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>